front: link products to db && search filter

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Records</title>
+    <title>Платівки</title>
     <link rel="icon" type="image/ico" href="/favicon/vinyl.ico" />
     <link rel="stylesheet" href="/css/index.css" type="text/css" media="all" />
   </head>
