--- a/views/explore.html
+++ b/views/explore.html
@@ -3,28 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Explore</title>
+    <title>Пошук</title>
     <link rel="icon" type="image/ico" href="/favicon/vinyl.ico" />
-    <script charset="utf-8"></script>
-  </head>
-  <body>
-    <!-- FONTS -->
     <link
       href="https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/style.css" type="text/css" media="all" />
-
+    <link rel="stylesheet" href="https://unpkg.com/vue-select@latest/dist/vue-select.css">
+  </head>
+  <body>
+    <!-- FONTS -->
     <!-- PAGE STUFF -->
     <div id="app">
       <div class="menu">
-        <p class="rela-block">menu</p>
+        <p class="rela-block">меню</p>
       </div>
       <div :class="['rela-block', 'page-container', menuOpen?'shifted':'']">
         <div :class="['rela-block', 'nav-bar']">
           <div class="rela-block gutter-container inner-nav-container">
             <div :class="['nav-flip', 'top', searchOpen?'active':'']">
-              <div class="abs-center logo link">платівки.ua</div>
+              <div class="abs-center logo link">платівки.</div>
               <div
                 :class="['left', 'ui-icon', 'menu-button', menuOpen?'active':'']"
                 @click="menuOpen = !menuOpen"
@@ -50,7 +49,7 @@
               <input
                 v-model="searchInput"
                 type="text"
-                placeholder="Search here..."
+                placeholder="Шукати тут ..."
                 class="search-bar"
               />
             </div>
@@ -68,7 +67,7 @@
         <div class="rela-block page-section top-section">
           <div class="gutter-container">
             <div class="rela-block section-nav">
-              <h2 class="left">New Item Showcase</h2>
+              <h2 class="left">Вітрина нового товару</h2>
             </div>
             <div class="rela-block new-item-container">
               <div
@@ -93,10 +92,7 @@
                   :style="{'background': 'url(\''+ni.img+'\') center no-repeat', 'animation-delay': (index*0.1)+'s'}"
                 >
                   <div class="new-item-info">
-                    <p class="abs-center">
-                      ${ ni.name }<br />
-                      ${ ni.artist }
-                    </p>
+                    <p class="abs-center">{{ ni.name }}<br />{{ ni.artist }}</p>
                   </div>
                   <div class="product-view-button" @click="viewProduct(ni.id)">
                     View
@@ -110,19 +106,113 @@
           <div class="rela-block gutter-container">
             <div class="rela-block section-nav">
               <h2 class="left">
-                All Products<span v-show="currentCatg !== 'All'"
-                  >/${ currentCatg }</span
+                  Усі звукозаписи<span v-show="currentGenre !== 'Усі'"
+                  >/{{ currentGenre }}</span
                 >
               </h2>
               <div class="right category-select">
                 <div
-                  v-for="c in catg"
-                  :class="['rela-inline', 'category', currentCatg===c?'active':'']"
-                  @click="currentCatg = c; updateFilteredProducts()"
+                  v-for="c in genre"
+                  :class="['rela-inline', 'category', currentGenre===c?'active':'']"
+                  @click="currentGenre = c; updateFilteredProducts()"
                 >
-                  ${ c }
+                  {{ c }}
                 </div>
               </div>
+            </div>
+            <div class="rela-block product-item-container">
+              <product-comp
+                v-for="(item,index) in displayedProducts"
+                :info="item"
+              ></product-comp>
+            </div>
+            <div
+              v-show="this.displayPos < this.filteredProducts.length"
+              class="rela-block load-button"
+            >
+              <div
+                class="rela-inline load-button-container"
+                @click="addDisplayedProducts"
+              >
+                <p>Завантажити ще</p>
+                <svg viewbox="0 0 50 50" class="button-svg">
+                  <path />
+                </svg>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="rela-block page-section new-section">
+          <div class="rela-block gutter-container">
+            <div class="rela-block section-nav">
+              <h2 class="left">Щось круте тут</h2>
+            </div>
+          </div>
+        </div>
+        <div class="rela-block footer">
+          <div class="rela-block gutter-container inner-footer-container">
+              <div class="logo">платівки.</div>
+          </div>
+        </div>
+      </div>
+
+      <div :class="['product-view-container', productViewOpen?'active':'']">
+        <div class="rela-block gutter-container">
+          <div class="rela-block section-nav">
+            <h2 class="left">Перегляд товару</h2>
+            <div
+              class="rela-inline right close-button"
+              @click="productViewOpen = false"
+            >
+              <svg viewbox="0 0 30 30" class="button-svg">
+                <path d="M 8 8 L 22 22" />
+                <path d="M 22 8 L 8 22" />
+              </svg>
+            </div>
+          </div>
+          <div class="rela-block pv-container">
+            <div
+              class="rela-block pv-pic"
+              :style="{'background': 'url(\''+viewedProduct.img+'\') center no-repeat'}"
+            ></div>
+          </div>
+          <div class="rela-block pv-container">
+            <div class="rela-block pv-info">
+              <h2 class="rela-block">{{ viewedProduct.name }}</h2>
+              <h3 class="rela-block">{{ viewedProduct.artist }}</h3>
+              <div class="rela-block info-row">
+                <div class="rela-inline left">Дата випуску:</div>
+                <div
+                  class="rela-block text"
+                  v-html="viewedProduct.date||'Немає дати випуску'"
+                ></div>
+              </div>
+              <div class="rela-block info-row">
+                <div class="rela-inline left">Жанр:</div>
+                <div
+                  class="rela-block text"
+                  v-html="viewedProduct.genre||'Немає жанру'"
+                ></div>
+              </div>
+              <div class="rela-block info-row">
+                <div class="rela-inline left">Опис:</div>
+                <div
+                  class="rela-block text"
+                  v-html="viewedProduct.desc||'Немає опису'"
+                ></div>
+              </div>
+            </div>
+          </div>
+          <div class="rela-block pv-container">
+            <h2>Пов’язані товари</h2>
+            <div class="rela-block pv-related-container">
+            <!--   Other {{ viewedProduct.genre }} products here -->
+            </div>
+            <div
+                v-for="c in genre"
+                :class="['rela-inline', 'category', currentGenre===c?'active':'']"
+                @click="currentGenre = c; updateFilteredProducts()"
+             >
             </div>
             <div class="rela-block product-item-container">
               <product-comp
@@ -145,79 +235,156 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="rela-block page-section new-section">
-          <div class="rela-block gutter-container">
-            <div class="rela-block section-nav">
-              <h2 class="left">Something Cool Here</h2>
-              <p>{{.product}}</p>
-            </div>
-          </div>
-        </div>
-        <div class="rela-block footer">
-          <div class="rela-block gutter-container inner-footer-container">
-            <div class="logo">tunes.</div>
-          </div>
-        </div>
-      </div>
-
-      <div :class="['product-view-container', productViewOpen?'active':'']">
-        <div class="rela-block gutter-container">
-          <div class="rela-block section-nav">
-            <h2 class="left">Product View</h2>
-            <div
-              class="rela-inline right close-button"
-              @click="productViewOpen = false"
-            >
-              <svg viewbox="0 0 30 30" class="button-svg">
-                <path d="M 8 8 L 22 22" />
-                <path d="M 22 8 L 8 22" />
-              </svg>
-            </div>
-          </div>
-          <div class="rela-block pv-container">
-            <div
-              class="rela-block pv-pic"
-              :style="{'background': 'url(\''+viewedProduct.img+'\') center no-repeat'}"
-            ></div>
-          </div>
-          <div class="rela-block pv-container">
-            <div class="rela-block pv-info">
-              <h2 class="rela-block">${ viewedProduct.name }</h2>
-              <h3 class="rela-block">${ viewedProduct.artist }</h3>
-              <div class="rela-block info-row">
-                <div class="rela-inline left">Release Date:</div>
-                <div
-                  class="rela-block text"
-                  v-html="viewedProduct.date||'No Release Date'"
-                ></div>
-              </div>
-              <div class="rela-block info-row">
-                <div class="rela-inline left">Product Category:</div>
-                <div
-                  class="rela-block text"
-                  v-html="viewedProduct.catg||'No Category'"
-                ></div>
-              </div>
-              <div class="rela-block info-row">
-                <div class="rela-inline left">Product Description:</div>
-                <div
-                  class="rela-block text"
-                  v-html="viewedProduct.desc||'No Description'"
-                ></div>
-              </div>
-            </div>
-          </div>
-          <div class="rela-block pv-container">
-            <h2>Related Items</h2>
-            <div class="rela-block pv-related-container">
-              Other ${ viewedProduct.catg } products here
-            </div>
           </div>
         </div>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.10/vue.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="https://unpkg.com/vue-select@latest"></script>
+    <script charset="utf-8">
+        Vue.component('productComp', {
+            template: ` <div v-show="info.id >= 0" :class="['rela-inline', 'product-card']" :key="info.id" :style="{'animation-delay':(info.delay*0.1)+'s'}">
+                            <div class="rela-block product-pic" :style="{'background': 'url('+info.img+') center no-repeat'}">
+                                <div class="product-view-button" @click="view(info.id)">View</div>
+                            </div>
+                            <div class="rela-block product-info">
+                                <div class="rela-block">
+                                    <p>{{info.name}}</p>
+                                    <p class="product-artist">{{info.artist}}</p>
+                                </div>
+                                <div class="vert-center product-cost">{{info.cost}}₴</div>
+                            </div>
+                        </div>`,
+            props: {
+                info: {
+                    type: Object,
+                    default: {
+                        id: 0,
+                        name: 'Untitled',
+                        artist: 'Artist',
+                        desc: 'Product description',
+                        delay: 0,
+                        cost: 0,
+                        genre: 'test',
+                        img: 'https://picsum.photos/600/?random',
+                    }
+                },
+            },
+            methods: {
+                view: function(id) { app.viewProduct(id); },
+            }
+        });
+
+        // - Vue Stuff -
+        var app = new Vue({
+            el: '#app',
+            data: {
+                menuOpen: false,
+                cartOpen: false,
+                searchOpen: false,
+                productViewOpen: false,
+                currentViewedProduct: 0, // Product's id
+                viewedProduct: {},
+                searchInput: '',
+                newItems: [],
+                newItemPos: 0,
+                products: [[.product]],
+                filteredProducts: [],
+                displayedProducts: [],
+                displayPos: 0,
+                genre: ['Усі'],
+                currentGenre: 'Усі',
+                title: '',
+            },
+            watch: {
+                searchInput: function(){
+                    this.searchText = this.searchInput;
+                    this.filteredProducts = [];
+                    if(this.searchText.length === 0) {
+                        this.updateFilteredProducts()
+                    }
+                    else {
+                        for(var i in this.products) {
+                            if(this.products[i].artist.toLowerCase().includes(this.searchText.toLowerCase()) || this.products[i].name.toLowerCase().includes(this.searchText.toLowerCase())) {
+                                this.filteredProducts.push(this.products[i]);
+                            }
+                        }
+                    }
+                    this.updateDisplayedProducts();
+
+                }
+            },
+            mounted: function() {
+                axios.get("/api/genres").then((response) => {
+                    for (var i = 0; i < 10; i++) {
+                        this.genre.push(response.data.genres[i]["name"]);
+                    }
+                });
+            },
+            methods: {
+                init: function() {
+                    app.updateNewItems();
+                    app.updateFilteredProducts();
+                },
+                updateNewItems: function() {
+                    // sort all of the products by date and then take the 10 newest
+                    this.newItems = [];
+                    var arr = [];
+                    // 1 because of the test product (Need to fix that)
+                    for(var i = 1; i < this.products.length; i++) {arr.push(this.products[i])}
+                    arr.sort(function(a, b){ return (new Date(b.date)).getTime() - (new Date(a.date)).getTime() });
+
+                    for(var i = 0; i < 10 && i < arr.length; i++) { this.newItems.push(arr[i]) }
+                },
+                updateNewItemPos: function(num) {
+                    this.newItemPos += num;
+                    // Checks
+                    if(this.newItemPos < 0) { this.newItemPos = 0 }
+                    if(this.newItems.length > 1 && (this.newItemPos > this.newItems.length - 1)) {
+                        this.newItemPos = this.newItems.length - 1
+                    }
+                },
+                updateFilteredProducts: function() {
+                    this.filteredProducts = [];
+                    for(var i in this.products) {
+                        if(this.products[i].genre === this.currentGenre || this.currentGenre === 'Усі') { this.filteredProducts.push(this.products[i]) }
+                    }
+                    app.updateDisplayedProducts();
+                },
+                updateDisplayedProducts: function() {
+                    this.displayedProducts = [];
+                    console.log('updateDisplayedProducts');
+                    this.displayPos = 0;
+                    app.addDisplayedProducts();
+                },
+                addDisplayedProducts: function() {
+                    if((this.filteredProducts.length - this.displayPos) <= 12) {
+                        this.displayedProducts = JSON.parse(JSON.stringify( this.filteredProducts ));
+                        for(var i = 0; i < this.displayedProducts.length; i++) { this.displayedProducts[i].delay = (i - this.displayPos); }
+                        this.displayPos = this.filteredProducts.length;
+                    } else {
+                        // The ternary is for the test product. I really need to fix that.... :/
+                        for(var i = 0; i < (this.displayPos===0?13:12); i++) {
+                            this.displayedProducts.push(this.filteredProducts[i + this.displayPos]);
+                            this.displayedProducts[i+this.displayPos].delay = (i);
+                        }
+                        this.displayPos = this.displayedProducts.length;
+                    }
+                },
+                updateViewedProduct: function() {
+                    this.viewedProduct = (app.products.filter(function(el){ return el.id === app.currentViewedProduct }))[0];
+                },
+                viewProduct: function(id) {
+                    this.currentViewedProduct = id;
+                    app.updateViewedProduct();
+                    this.productViewOpen = true;
+                },
+            }
+        });
+        app.init();
+        // Scroll Function
+        // window.addEventListener('scroll', function() { app.pageScrolled = (window.scrollY > 0); }, false);
+    </script>
   </body>
 </html>
