--- a/views/index.html
+++ b/views/index.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width" />
     <title>Платівки</title>
     <link rel="icon" type="image/ico" href="/favicon/vinyl.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"
+    />
     <link rel="stylesheet" href="/css/index.css" type="text/css" media="all" />
   </head>
-  <body>
+  <body class="example">
     <!-- Hero content: will be in the middle -->
-    <div class="hero">
-      <div class="container has-text-centered">
-        <p class="title title-style">платівки.ua</p>
-        <p class="subtitle subtitle-style">
-          Вибирайте платівки на будь-який смак! 🎺
-        </p>
-        <button><a href="/explore">Почати пошук</a></button>
-      </div>
+    <div class="abs-center">
+      <p class="title title-style">платівки.ua</p>
+      <p class="subtitle subtitle-style">
+        Вибирайте платівки на будь-який смак! 🎺
+      </p>
+      <button class="button"><a href="/explore">Почати пошук</a></button>
     </div>
   </body>
 </html>
