--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,6 +2,34 @@
 @import url("https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans");
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 
+* {
+    line-height: 1.2;
+    margin: 0;
+    /* Hide scrollbar for IE,Edge and Firefox */
+    scrollbar-width: none;     /* Firefox     */
+    -ms-overflow-style: none;  /* IE and Edge */
+    overflow: -moz-scrollbars-none;
+}
+html {
+    color: #888;
+    display: table;
+    font-family: sans-serif;
+    height: 100%;
+    text-align: center;
+    width: 100%;
+}
+body {
+    display: table-cell;
+    vertical-align: middle;
+    margin: 2em auto;
+    overflow: hidden;
+}
+.abs-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 .has-bg-img {
     background: url("https://images.pexels.com/photos/145707/pexels-photo-145707.jpeg")
     center center;
@@ -14,36 +42,6 @@
 .subtitle-style {
     font-size: 30px;
     font-family: Open Sans;
-h1 {
-    color: purple;
-    font-size: 2em;
-}
-.hero {
-    position: absolute;
-    width: 100%;
-    height: 150px;
-    top: 50%;
-    margin-top: -50px;
-}
 
-
-* {
-    line-height: 1.2;
-    margin: 0;
-}
-
-html {
-    color: #888;
-    display: table;
-    font-family: sans-serif;
-    height: 100%;
-    text-align: center;
-    width: 100%;
-}
-
-body {
-    display: table-cell;
-    vertical-align: middle;
-    margin: 2em auto;
-}
-
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar { display: none; }
