--- a/assets/css/explore.css
+++ b/assets/css/explore.css
@@ -563,6 +563,13 @@ h3 {
 .cart .section-nav {
   margin-bottom: 0;
 }
+/* .cart-item-container { */
+/*   display: flex; */
+/*   flex-wrap: wrap; */
+/*   align-items: center; */
+/*   justify-content: center; */
+/*   margin-bottom: 20px; */
+/* } */
 .hover figure {
   background: black;
 }
