--- a/assets/css/explore.css
+++ b/assets/css/explore.css
@@ -122,7 +122,6 @@ h3 {
   position: fixed;
   top: 0;
   left: 0;
-  right: ;
   bottom: 0;
   width: 300px;
   background-color: #e6e6e6;
@@ -264,6 +263,7 @@ h3 {
   background-color: #f4f4f4;
   overflow: hidden;
   border-radius: 4px;
+  cursor: pointer;
 }
 .move-arrow {
   z-index: 5;
@@ -364,9 +364,10 @@ h3 {
   border-radius: 2px;
   background-size: cover !important;
   background-color: #e6e6e6;
+  cursor: pointer;
 }
 .product-pic:hover {
-  opacity: 0.8;
+  opacity: 1;
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
 }
@@ -374,6 +375,11 @@ h3 {
   opacity: 1;
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
+}
+.product-pic:hover .product-buy-button {
+  opacity: 1;
+  -webkit-transition: 0.1s ease-in-out;
+  transition: 0.1s ease-in-out;
 }
 .product-view-button {
   position: absolute;
@@ -386,13 +392,15 @@ h3 {
   cursor: pointer;
 }
 .product-buy-button {
+  z-index: 100;
   position: absolute;
-  left: 10px;
-  bottom: 10px;
+  left: 0;
+  bottom: 0;
+  width: 240px;
   padding: 6px 12px;
-  background-color: red;
+  border-radius: 0%;
   box-shadow: 0 1px 8px -1px rgba(0, 0, 0, 0.4);
-  opacity: 1;
+  opacity: 0;
   cursor: pointer;
 }
 .product-info {
@@ -546,14 +554,13 @@ h3 {
   z-index: 100;
   position: fixed;
   top: 0;
-  left: ;
   right: -350px;
   bottom: 0;
   width: 350px;
   padding: 20px;
   overflow-y: auto;
   background-color: #f4f4f4;
-  opacity: 0.5;
+  opacity: 0.8;
   box-shadow: 0 1px 10px -1px rgba(0, 0, 0, 0.4);
   transition: 0.5s cubic-bezier(0.6, 0, 0.2, 1);
 }
@@ -580,4 +587,49 @@ h3 {
 }
 .hover figure:hover img {
   opacity: 0.5;
+}
+.profile {
+  position: fixed;
+  top: 0;
+  left: 300px;
+  bottom: 0;
+  width: 300px;
+  padding: 20px;
+  overflow-y: auto;
+  background-color: #e6e6e6;
+  box-shadow: 0 1px 10px -1px rgba(0, 0, 0, 0.4);
+  transition: 0.5s cubic-bezier(0.6, 0, 0.2, 1);
+}
+.profile.active {
+  left: 0;
+}
+.profile .section-nav {
+  margin-bottom: 0;
+}
+.checkout-container {
+  z-index: 100;
+  position: fixed;
+  top: 100px;
+  left: 100%;
+  right: ;
+  bottom: 100px;
+  width: 50%;
+  padding: 10px 0;
+  padding-top: 30px;
+  overflow-y: auto;
+  background-color: #fff;
+  box-shadow: 0 1px 10px -1px rgba(0, 0, 0, 0.4);
+  transition: 0.5s cubic-bezier(0.6, 0, 0.2, 1);
+}
+.checkout-container.active {
+  left: 25%;
+}
+.checkout-container .section-nav {
+  margin-bottom: 0;
+}
+.cart-pic {
+  height: 75px;
+  width: 75px;
+  background-size: cover !important;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
 }
