--- a/assets/css/explore.css
+++ b/assets/css/explore.css
@@ -64,24 +64,17 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  right: ;
   bottom: ;
   transform: translate(-50%, -50%);
 }
 .vert-center {
   position: absolute;
   top: 50%;
-  left: ;
-  right: ;
-  bottom: ;
   transform: translateY(-50%);
 }
 .horz-center {
   position: absolute;
-  top: ;
   left: 50%;
-  right: ;
-  bottom: ;
   transform: translateX(-50%);
 }
 .rela-block {
@@ -133,7 +126,6 @@ h3 {
   position: absolute;
   top: 0;
   left: 0;
-  right: ;
   bottom: 0;
   overflow-y: auto;
   width: 100%;
@@ -449,7 +441,6 @@ h3 {
   position: fixed;
   top: 0;
   left: 100%;
-  right: ;
   bottom: 0;
   width: 100%;
   padding: 10px 0;
@@ -570,13 +561,13 @@ h3 {
 .cart .section-nav {
   margin-bottom: 0;
 }
-/* .cart-item-container { */
-/*   display: flex; */
-/*   flex-wrap: wrap; */
-/*   align-items: center; */
-/*   justify-content: center; */
-/*   margin-bottom: 20px; */
-/* } */
+.cart-item-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
 .hover figure {
   background: black;
 }
@@ -611,7 +602,6 @@ h3 {
   position: fixed;
   top: 100px;
   left: 100%;
-  right: ;
   bottom: 100px;
   width: 50%;
   padding: 10px 0;
@@ -628,8 +618,100 @@ h3 {
   margin-bottom: 0;
 }
 .cart-pic {
-  height: 75px;
-  width: 75px;
+  height: 50px;
+  width: 50px;
   background-size: cover !important;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+.qty-minus {
+  text-align: center;
+  cursor: pointer;
+}
+
+.qty-plus {
+  text-align: center;
+  cursor: pointer;
+}
+
+.row {
+  width: 100%;
+  border-bottom: 1px solid #bfbfbf;
+  overflow: hidden;
+  padding: 10px 10%;
+  display: inline;
+}
+
+.cart-qty {
+  background: #ff5252;
+  border-radius: 50%;
+  color: #fff;
+  display: block;
+  font-size: 0.8em;
+  line-height: 17px;
+  position: absolute;
+  text-align: center;
+  bottom: 0px;
+  left: 0px;
+  height: 18px;
+  width: 18px;
+}
+
+.breadcrumb-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  list-style: none;
+  justify-content: center;
+  text-align: center;
+}
+.breadcrumb-list li {
+  font-size: 0.9rem;
+  letter-spacing: 0.125rem;
+  text-transform: uppercase;
+}
+
+.breadcrumb-item.active {
+  color: #333;
+}
+
+.breadcrumb-item {
+  color: #777;
+}
+
+.breadcrumb-item:hover {
+  color: #007bff !important;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.breadcrumb-item.active:hover {
+  color: #333;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.breadcrumb-item::before {
+  display: inline-block;
+  padding: 0 0.5rem;
+  color: #d5d5d5;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+ul li {
+  margin: 0 1.75rem 0 0;
+}
+
+nav ul {
+  justify-content: flex-end;
+}
+
+*::before,
+*::after {
+  box-sizing: border-box;
 }
