--- a/assets/css/explore.css
+++ b/assets/css/explore.css
@@ -540,6 +540,23 @@ h3 {
 /*   text-align: center; */
 /*   padding: 20px; */
 /* } */
+.filter {
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  right: -350px;
+  bottom: 0;
+  width: 350px;
+  padding: 20px;
+  overflow-y: auto;
+  background-color: #f4f4f4;
+  opacity: 0.8;
+  box-shadow: 0 1px 10px -1px rgba(0, 0, 0, 0.4);
+  transition: 0.5s cubic-bezier(0.6, 0, 0.2, 1);
+}
+.filter.active {
+  right: 0;
+}
 
 .cart {
   z-index: 100;
@@ -618,8 +635,8 @@ h3 {
   margin-bottom: 0;
 }
 .cart-pic {
-  height: 50px;
-  width: 50px;
+  height: 75px;
+  width: 75px;
   background-size: cover !important;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
 }
@@ -714,4 +731,9 @@ nav ul {
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+.group {
+  position: relative;
+  margin-bottom: 45px;
 }
