--- a/assets/css/input-boxes.css
+++ b/assets/css/input-boxes.css
@@ -1,267 +1,76 @@
-/* form starting stylings ------------------------------- */
-.group {
-  position: relative;
-  margin-bottom: 45px;
-}
-input {
-  font-size: 18px;
-  padding: 10px 10px 10px 5px;
-  display: block;
-  width: 200px;
-  border: none;
-  background-color: #e6e6e6;
-  border-bottom: 1px solid #757575;
-}
-input:focus {
-  outline: none;
-}
+/* /1* form starting stylings ------------------------------- *1/ */
+/* .group { */
+/*   position: relative; */
+/*   margin-bottom: 45px; */
+/* } */
+/* input { */
+/*   font-size: 18px; */
+/*   padding: 10px 10px 10px 5px; */
+/*   display: block; */
+/*   width: 200px; */
+/*   border: none; */
+/*   background-color: #e6e6e6; */
+/*   border-bottom: 1px solid #757575; */
+/* } */
+/* input:focus { */
+/*   outline: none; */
+/* } */
 
-input:hover {
-  color: #007bff !important;
-  -webkit-transition: 0.3s ease-in-out;
-  transition: 0.3s ease-in-out;
-}
-
-/* LABEL ======================================= */
-label {
-  color: #999;
-  font-size: 18px;
-  font-weight: normal;
-  position: absolute;
-  pointer-events: none;
-  left: 5px;
-  top: 10px;
-  transition: 0.2s ease all;
-  -moz-transition: 0.2s ease all;
-  -webkit-transition: 0.2s ease all;
-}
-
-/* active state */
-input:focus ~ label,
-input:valid ~ label {
-  top: -20px;
-  font-size: 14px;
-  color: #007bff;
-}
-
-/* BOTTOM BARS ================================= */
-.bar {
-  position: relative;
-  display: block;
-  width: 200px;
-}
-.bar:before,
-.bar:after {
-  content: "";
-  height: 2px;
-  width: 0;
-  bottom: 1px;
-  position: absolute;
-  background: #007bff;
-  transition: 0.2s ease all;
-  -moz-transition: 0.2s ease all;
-  -webkit-transition: 0.2s ease all;
-}
-.bar:before {
-  left: 50%;
-}
-.bar:after {
-  right: 50%;
-}
-
-/* active state */
-input:focus ~ .bar:before,
-input:focus ~ .bar:after {
-  width: 50%;
-}
-
-/* HIGHLIGHTER ================================== */
-/* .highlight { */
+/* /1* LABEL ======================================= *1/ */
+/* label { */
+/*   color: #999; */
+/*   font-size: 18px; */
+/*   font-weight: normal; */
 /*   position: absolute; */
-/*   height: 60%; */
-/*   width: 100px; */
-/*   top: 25%; */
-/*   left: 0; */
 /*   pointer-events: none; */
-/*   opacity: 0.5; */
+/*   left: 5px; */
+/*   top: 10px; */
+/*   transition: 0.2s ease all; */
+/*   -moz-transition: 0.2s ease all; */
+/*   -webkit-transition: 0.2s ease all; */
+/* } */
+
+/* label:hover { */
+/*   color: #007bff !important; */
+/*   -webkit-transition: 0.3s ease-in-out; */
+/*   transition: 0.3s ease-in-out; */
 /* } */
 
 /* /1* active state *1/ */
-/* input:focus ~ .highlight { */
-/*   -webkit-animation: inputHighlighter 0.3s ease; */
-/*   -moz-animation: inputHighlighter 0.3s ease; */
-/*   animation: inputHighlighter 0.3s ease; */
+/* input:focus ~ label, */
+/* input:valid ~ label { */
+/*   top: -20px; */
+/*   font-size: 14px; */
+/*   color: #007bff; */
 /* } */
 
-/* /1* ANIMATIONS ================ *1/ */
-/* @-webkit-keyframes inputHighlighter { */
-/*   from { */
-/*     background: #5264ae; */
-/*   } */
-/*   to { */
-/*     width: 0; */
-/*     background: transparent; */
-/*   } */
+/* /1* BOTTOM BARS ================================= *1/ */
+/* .bar { */
+/*   position: relative; */
+/*   display: block; */
+/*   width: 200px; */
 /* } */
-/* @-moz-keyframes inputHighlighter { */
-/*   from { */
-/*     background: #5264ae; */
-/*   } */
-/*   to { */
-/*     width: 0; */
-/*     background: transparent; */
-/*   } */
+/* .bar:before, */
+/* .bar:after { */
+/*   content: ""; */
+/*   height: 2px; */
+/*   width: 0; */
+/*   bottom: 1px; */
+/*   position: absolute; */
+/*   background: #007bff; */
+/*   transition: 0.2s ease all; */
+/*   -moz-transition: 0.2s ease all; */
+/*   -webkit-transition: 0.2s ease all; */
 /* } */
-/* @keyframes inputHighlighter { */
-/*   from { */
-/*     background: #5264ae; */
-/*   } */
-/*   to { */
-/*     width: 0; */
-/*     background: transparent; */
-/*   } */
+/* .bar:before { */
+/*   left: 50%; */
+/* } */
+/* .bar:after { */
+/*   right: 50%; */
 /* } */
 
-body {
-  font: 1em/1.45 Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-}
-
-a {
-  color: #4527a0;
-}
-a:hover {
-  color: #7e57c2;
-}
-
-.m-main-header {
-  background: #4527a0;
-  min-height: 120px;
-}
-
-.shadow {
-  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.3);
-}
-
-.m-panel {
-  border: 0;
-  background: #ffffff;
-  margin-top: -50px;
-  border-top: 5px solid #7e57c2;
-}
-
-.form-group-material {
-  position: relative;
-  margin-top: 16px;
-  margin-bottom: 26px;
-}
-.form-group-material:after {
-  height: 1px;
-  background: #e6e6e6;
-  width: 100%;
-}
-.form-group-material:before {
-  height: 2px;
-  background: #e91e63;
-  z-index: 1;
-  width: 0;
-  transition: width 0.3s;
-}
-.form-group-material:after,
-.form-group-material:before {
-  display: block;
-  content: "";
-  position: absolute;
-  bottom: 0;
-}
-.form-group-material.error {
-  margin-bottom: 36px;
-}
-.form-group-material.error:before {
-  background-color: #f44336;
-}
-.form-group-material.focused:before {
-  width: 100%;
-}
-
-.error small.error {
-  position: absolute;
-  background: transparent;
-  color: #f44336;
-  font-style: normal;
-  padding-left: 0;
-}
-
-.material-label {
-  display: block;
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  line-height: 1;
-  cursor: text;
-  color: #b3b3b3;
-  transition: transform ease 0.3s, color ease 0.3s;
-  transform-origin: 0 0;
-}
-.error .material-label {
-  color: #f44336;
-}
-.focused .material-label {
-  transform: translateY(-220%) scale(0.82);
-  color: #e91e63;
-}
-.error.focused .material-label {
-  color: #f44336;
-}
-.has-value .material-label {
-  transform: translateY(-220%) scale(0.82);
-}
-
-input.material-field,
-textarea.material-field {
-  border-width: 0;
-  padding-left: 0;
-  padding-right: 0;
-  box-shadow: none;
-  margin: 0;
-  background: transparent;
-}
-input.material-field:focus,
-textarea.material-field:focus {
-  box-shadow: none;
-  background: none;
-}
-
-button {
-  border-radius: 3px;
-  padding: 8px 18px;
-  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background: #e91e63;
-}
-button:hover {
-  background: #f27ba3;
-}
-
-p.notice {
-  font-size: 13px;
-  color: #6f6f6f;
-  margin-top: 26px;
-}
-
-.form-header h2 {
-  margin-bottom: 20px;
-}
-
-.credits {
-  font-size: 13px;
-}
+/* /1* active state *1/ */
+/* input:focus ~ .bar:before, */
+/* input:focus ~ .bar:after { */
+/*   width: 50%; */
+/* } */
